Archive State Party Colors

--- a/email/email-new.html
+++ b/email/email-new.html
@@ -316,18 +316,19 @@
           {% assign primary = red %}
           {% assign secondary = red %}
         {% when 'North Carolina Republican Party' %}
-          {% assign blue = '#023D7B' %}
-          {% assign red = '#D0021A' %}
-          {% assign primary = red %}
+          {% assign blue = '#0A3C6B' %}
+          {% assign red = '#AF1514' %}
+          {% assign primary = blue %}
           {% assign secondary = red %}
         {% when 'The Missouri Republican Party' %}
-          {% assign blue = '#023D7B' %}
-          {% assign red = '#D0021A' %}
-          {% assign primary = red %}
+          {% assign blue = '#253553' %}
+          {% assign red = '#A51E34' %}
+          {% assign primary = blue %}
           {% assign secondary = red %}
         {% when 'Republican Party of Iowa' %}
-          {% assign blue = '#023D7B' %}
-          {% assign red = '#D0021A' %}
+          {% assign blue = '#0D2978' %}
+          {% assign red = '#FC0D1F' %}
+          {% assign yellow = '#FFFD4D' %}
           {% assign primary = red %}
           {% assign secondary = red %}
       {% endcomment %}
