Updated Default Green

--- a/email/email-new.html
+++ b/email/email-new.html
@@ -256,7 +256,7 @@
   {% assign link = '#0000EE' %}
   {% assign black = '#000000' %}
   {% assign blue = '#023D7B' %}
-  {% assign green = '#159965' %}
+  {% assign green = '#00CC00' %}
   {% assign gray = '#A4A8B7' %}
   {% assign light = '#E9E9E9' %}
   {% assign muted = '#757777' %}
