Arial Black Headline

--- a/email/widgets/box-recent-donors.html
+++ b/email/widgets/box-recent-donors.html
@@ -1,6 +1,6 @@
 <center>
   <div style="border:5px solid {{ red }}; padding: 1em; margin-bottom: 1em; display: block; margin-left: auto; margin-right: auto; max-width: 450px;">
-    <p style="text-align: center;"><strong>Recent Donations From Grassroots Republicans:</strong></p>
+    <p style="font-family: {{font_headline}}; text-align: center;"><strong>Recent Donations From Grassroots Republicans:</strong></p>
 
     <p style="text-align: center;">
       {% for activity in settings.site.activities limit:5 %}
