Default to Standard Client Logos

--- a/email/images/email-header-logo.html
+++ b/email/images/email-header-logo.html
@@ -1,7 +1,7 @@
 <!-- Begin Email Header Logo -->
 	<div style="text-align: center;">
 		<a href="{{ base_url }}?utm_content=logo&{{ page_variables }}" target="_blank">
-			<img style="max-width: 100% !important; max-height: 200px !important; width: 400px !important;" src="{{ theme['logo-winred-client-text-2x.png'] }}" alt="{{ settings.official_name }}" />
+			<img style="max-width: 100% !important; max-height: 200px !important; width: 400px !important;" src="{{ theme['logo-winred-client-2x.png'] }}" alt="{{ settings.official_name }}" />
 		</a>
 	</div>
 <!-- /End Email Header Logo -->
