Updated Text Formatting

--- a/winred/winred-content-no_logo.html
+++ b/winred/winred-content-no_logo.html
@@ -1,4 +1,5 @@
-<p style="text-align: center;"><span style="font-family: 'Arial Black', Arial Black, Arial, sans-serif; font-size: 18pt; color: #d0021a;"><b>{{ headline default="ATTENTION REPUBLICANS:" }}</b></span></p>
+<p style="text-align: center;"><span style="font-size: 18pt; color: #d0021a;"><strong>{{ headline default="⬇ DONATE NOW ⬇" }}</strong></span></p>
+
 <p style="text-align: center;"><span style="font-size: 14pt; color: #000000;"><strong>{{ intro default="The Democrats will do, say, and spend whatever it takes to defeat us." }}</strong></span></p>
-<hr />
-<p style="text-align: center;"><em><span style="font-size: 14pt; color: #000000;">{{ cta default="Please chip in now to help us secure the Republican Majority." }}</span></em></p>
+
+<p style="text-align: center;"><span style="font-size: 14pt; color: #000000; background-color: #fffd4d;"><strong>{{ cta default="CONTRIBUTE ANY AMOUNT immediately to help secure our Republican Majority." }}</strong></span></p>
