Updated Button Colors (Red/Blue)
Update the default button colors to use a more distinctive combination of red & blue.

--- a/email/email-new.html
+++ b/email/email-new.html
@@ -267,7 +267,7 @@
   {% assign gold = '#CC9900' %}
 
   {% assign primary = red %}
-  {% assign secondary = red %}    
+  {% assign secondary = blue %}    
 
   {% assign color_100 = 'FF' %}
   {% assign color_90 = 'E6' %}
