--- a/email/widgets/headline-breaking_news.html
+++ b/email/widgets/headline-breaking_news.html
@@ -1,5 +1,5 @@
 <p style="font-family: {{ font_headline }}; font-size:{{ headline_font_size }}; text-align:center;">
-	<a href="{{ base_url }}?utm_content=headline&{{ page_variables }}" style="color:inherit; text-decoration: none;"><strong><span style="color:{{red}}; font-family: 'Arial Black', 'Arial Bold', {{font_body}};">BREAKING NEWS:</span> Lorem Ipsum</strong></a>
+	<a href="{{ base_url }}?utm_content=headline&{{ page_variables }}" style="color:inherit; text-decoration: none;"><strong><span style="color:{{red}};">BREAKING NEWS:</span> Lorem Ipsum</strong></a>
 </p>
 
 <p style="font-size:16pt; text-align:center;">
