--- a/email/widgets/headline-breaking_news.html
+++ b/email/widgets/headline-breaking_news.html
@@ -3,5 +3,5 @@
 </p>
 
 <p style="font-size:16pt; text-align:center;">
-	<strong><a href="{{ base_url }}?&utm_content=subheadline&{{ page_variables }}" style="color: inherit; text-decoration: none;">This is a subheadline or call to action.</a></strong>
+	<strong><a href="{{ base_url }}?&utm_content=subheadline&{{ page_variables }}" style="color: {{ link }}; text-decoration: underline;">This is a subheadline or call to action.</a></strong>
 </p>
