make headlines bigger

--- a/email/email-new.html
+++ b/email/email-new.html
@@ -347,7 +347,7 @@
   {% capture font_headline %}{{ font_body }}{% endcapture %}
   {% capture font_monospace %}Courier New, Courier, monospace{% endcapture %}
 
-  {% assign headline_font_size = '24px' %}
+  {% assign headline_font_size = '20pt' %}
   {% assign button_letter_spacing = '0' %}
   {% assign button_font_size = '16px' %}
   {% assign button_text_transform = 'uppercase' %}
