invert button colors (red/blue)

--- a/email/email-new.html
+++ b/email/email-new.html
@@ -266,8 +266,8 @@
   {% assign yellow = '#F8FF00' %}
   {% assign gold = '#CC9900' %}
 
-  {% assign primary = red %}
-  {% assign secondary = blue %}    
+  {% assign primary = blue %}
+  {% assign secondary = red %}    
 
   {% assign color_100 = 'FF' %}
   {% assign color_90 = 'E6' %}
