--- a/email/widgets/headline-bold.html
+++ b/email/widgets/headline-bold.html
@@ -1,3 +1,3 @@
 <p style="font-family: {{ font_body }}; font-size:{{ headline_font_size }}; text-align:center;">
-	<a href="{{ base_url }}?utm_content=text-bold&{{ page_variables }}" style="color: inherit; font-weight: bold; text-decoration: none;"><strong>Bold Link</strong></a>
+	<a href="{{ base_url }}?utm_content=text-bold&{{ page_variables }}" style="color: inherit; font-weight: normal; text-decoration: none;"><strong>Bold Link</strong></a>
 </p>
