updated default email signature

--- a/email/email-new.html
+++ b/email/email-new.html
@@ -586,6 +586,6 @@
 <p>Thank you.</p>
 
 <p>
-  <!-- <strong>Republican Action Alerts</strong><br> -->
-  <em>-- {{ settings.official_name }}</em>
+  <strong>Republican Action Alerts</strong><br>
+  <em>Sent via {{ settings.official_name }}</em>
 </p>
